<resources>
    <string name="app_name">Counter</string>
    <string name="hide">Hide</string>
    <string name="visible">Visible</string>
    <string name="go_next_screen">Go next Screen</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="new_color">New color</string>
    <string name="second_screen_text">Опа, второй экран открылся</string>
    <string name="back">Back</string>
    <string name="add_plant_text">Add plant</string>
</resources>