<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goNextScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_next_screen"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#8D2EBC"
        android:background="@drawable/button_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"/>
    <Button
        android:id="@+id/newColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        android:textColor="#8D2EBC"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#8D2EBC"/>

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toTopOf="@id/counter"
        app:layout_constraintBottom_toBottomOf="@id/counter"
        app:layout_constraintEnd_toStartOf="@id/counter"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#8D2EBC"/>

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toTopOf="@id/counter"
        app:layout_constraintBottom_toBottomOf="@id/counter"
        app:layout_constraintStart_toEndOf="@+id/counter"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#8D2EBC"/>

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>